# 3D-Rigid-Rotating-Objects-

./: .gitignore  LICENSE  README.md  environment.yaml  notes.txt  pyproject.toml  run_data_gen.py
BlenderModel/: 3dpend.blend  cube.blend  heavytop.blend  prism.blend
run/: run.sh
src/rbnn_data_generation/utils/: data_gen.py  data_preprocess.py  data_utils.py  math_utils.py
