[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rbnn_data_generation"
version = "0.0.1"
authors = [
  { name="Justice Mason", email="jjmason@princeton.edu " }		
]
description = "A package to generated images of 3D rotating rigid bodies"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: POSIX :: Linux",
]
dependencies = [
    "numpy",
    "torch"
]

[project.urls]
"Homepage" = "https://github.com/jjmason687/rbnn_data_generation"